force-app/main/default/objects/Case_Record__c/fields/Cleanslate_Days_Off_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Days_Off_Accrued__c</fullName>
    <formula>IF (isnull (Weeks_Since_Internship_Start_Date__c), NULL, 

IF ((Weeks_Since_Internship_Start_Date__c) &lt; 13, 0, 

FLOOR ((Weeks_Since_Internship_Start_Date__c)/13)*4))</formula>
    <label># Cleanslate Days Off Accrued</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>