force-app/main/default/objects/Case_Record__c/fields/Cleanslate_Days_Off_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Days_Off_Remaining__c</fullName>
    <formula>Cleanslate_Days_Off_Accrued__c -  Cleanslate_Absences__c +  Cleanslate_Balance_Days_Applied__c</formula>
    <label># Cleanslate Days Off Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>