force-app/main/default/objects/Case_Record__c/fields/Cleanslate_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Evaluations__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;TemplateId=a1F4y00000AF7Pv&quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;QMode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleanslate Evaluations</label>
    <type>Text</type>
</CustomField>