force-app/main/default/objects/Case_Record__c/fields/Cleanslate_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Orientation__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;EmailToID=&quot;+ Main_Client__r.Id +
&quot;&amp;EmailFromID=0D2f3000000XZQU&quot; +
&quot;&amp;EmailTemplateId=a1Ef30000047M8G&quot; +
&quot;&amp;AttachmentId=0694y000008XHo4AAG&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleanslate Orientation</label>
    <type>Text</type>
</CustomField>