force-app/main/default/objects/Case_Record__c/fields/Cleanslate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Start_Date__c</fullName>
    <inlineHelpText>Auto-populates for Cleanslate Direct with the &apos;Program Start Date, Cohort&apos;</inlineHelpText>
    <label>Cleanslate Cohort Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Training_Track__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2019-09-16</fullName>
            </value>
            <value>
                <fullName>2019-10-21</fullName>
            </value>
            <value>
                <fullName>2019-12-02</fullName>
            </value>
            <value>
                <fullName>2020-01-06</fullName>
            </value>
            <value>
                <fullName>2020-02-10</fullName>
            </value>
            <value>
                <fullName>2020-04-16</fullName>
            </value>
            <value>
                <fullName>2020-05-06</fullName>
            </value>
            <value>
                <fullName>2020-06-01</fullName>
            </value>
            <value>
                <fullName>2020-06-10</fullName>
            </value>
            <value>
                <fullName>2020-07-07</fullName>
            </value>
            <value>
                <fullName>2020-07-08</fullName>
            </value>
            <value>
                <fullName>2020-07-20</fullName>
            </value>
            <value>
                <fullName>2020-08-05</fullName>
            </value>
            <value>
                <fullName>2020-08-24</fullName>
            </value>
            <value>
                <fullName>2020-09-02</fullName>
            </value>
            <value>
                <fullName>2020-09-14</fullName>
            </value>
            <value>
                <fullName>2020-09-30</fullName>
            </value>
            <value>
                <fullName>2020-10-19</fullName>
            </value>
            <value>
                <fullName>2020-11-04</fullName>
            </value>
            <value>
                <fullName>2020-11-19</fullName>
            </value>
            <value>
                <fullName>2020-11-30</fullName>
            </value>
            <value>
                <fullName>2020-12-02</fullName>
            </value>
            <value>
                <fullName>2021-01-06</fullName>
            </value>
            <value>
                <fullName>2021-02-03</fullName>
            </value>
            <value>
                <fullName>2021-02-08</fullName>
            </value>
            <value>
                <fullName>2021-03-03</fullName>
            </value>
            <value>
                <fullName>2021-04-07</fullName>
            </value>
            <value>
                <fullName>2021-04-21</fullName>
            </value>
            <value>
                <fullName>2021-05-05</fullName>
            </value>
            <value>
                <fullName>2021-05-17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>