force-app/main/default/objects/Case_Record__c/fields/Client_Household__c.field-meta.xml
<CustomField>
    <fullName>Client_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Case Records</relationshipLabel>
    <relationshipName>Case_Records</relationshipName>
    <type>Lookup</type>
</CustomField>