force-app/main/default/objects/Case_Record__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Main_Client__r.Client_Full_Name__c</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>