force-app/main/default/objects/Case_Record__c/fields/Cohort_Type__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Type__c</fullName>
    <description>Exponent field, formerly &apos;Cohort Type&apos;. Did not change API name as not to disturb unit tests. Began collecting food security questions in Feb &apos;16.</description>
    <inlineHelpText>Within the past 12 months, I/we worried whether our food would run out before I/we got money to buy more.</inlineHelpText>
    <label>Food Insecurity Concern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Often True</fullName>
            </value>
            <value>
                <fullName>Sometimes True</fullName>
            </value>
            <value>
                <fullName>Never True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>