force-app/main/default/objects/Case_Record__c/fields/Committed_to__c.field-meta.xml
<CustomField>
    <fullName>Committed_to__c</fullName>
    <label>Committed to 4 Week Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>