force-app/main/default/objects/Case_Record__c/fields/Communication_SOE_Date__c.field-meta.xml
<CustomField>
    <fullName>Communication_SOE_Date__c</fullName>
    <label>Communication SOE Date</label>
    <type>Date</type>
</CustomField>