force-app/main/default/objects/Case_Record__c/fields/Community_Area__c.field-meta.xml
<CustomField>
    <fullName>Community_Area__c</fullName>
    <description>Community Area lookup: https://www.google.com/maps/d/viewer?mid=1O-3Uot4mSetKW-M_govahruUjDc&amp;msa=0&amp;ll=41.69418499999998%2C-87.62758799999995&amp;spn=0.340714%2C0.699692&amp;z=22. As of FY18 year-end, back updated alongside publishing of Performance Update.</description>
    <inlineHelpText>Corresponds to one of Chicago&apos;s 77 official community areas. Use the Community Area Website link to help select correctly.</inlineHelpText>
    <label>Community Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albany Park (14)</fullName>
            </value>
            <value>
                <fullName>Archer Heights (57)</fullName>
            </value>
            <value>
                <fullName>Armour Square (34)</fullName>
            </value>
            <value>
                <fullName>Ashburn (70)</fullName>
            </value>
            <value>
                <fullName>Auburn Gresham (71)</fullName>
            </value>
            <value>
                <fullName>Austin (25)</fullName>
            </value>
            <value>
                <fullName>Avalon Park (45)</fullName>
            </value>
            <value>
                <fullName>Avondale (21)</fullName>
            </value>
            <value>
                <fullName>Belmont Cragin (19)</fullName>
            </value>
            <value>
                <fullName>Beverly (72)</fullName>
            </value>
            <value>
                <fullName>Bridgeport (60)</fullName>
            </value>
            <value>
                <fullName>Brighton Park (58)</fullName>
            </value>
            <value>
                <fullName>Burnside (47)</fullName>
            </value>
            <value>
                <fullName>Calumet Heights (48)</fullName>
            </value>
            <value>
                <fullName>Chatham (44)</fullName>
            </value>
            <value>
                <fullName>Chicago Lawn (66)</fullName>
            </value>
            <value>
                <fullName>Clearing (64)</fullName>
            </value>
            <value>
                <fullName>Douglas (35)</fullName>
            </value>
            <value>
                <fullName>Dunning (17)</fullName>
            </value>
            <value>
                <fullName>East Garfield Park (27)</fullName>
            </value>
            <value>
                <fullName>East Side (52)</fullName>
            </value>
            <value>
                <fullName>Edgewater (77)</fullName>
            </value>
            <value>
                <fullName>Edison Park (9)</fullName>
            </value>
            <value>
                <fullName>Englewood (68)</fullName>
            </value>
            <value>
                <fullName>Forest Glen (12)</fullName>
            </value>
            <value>
                <fullName>Fuller Park (37)</fullName>
            </value>
            <value>
                <fullName>Gage Park (63)</fullName>
            </value>
            <value>
                <fullName>Garfield Ridge (56)</fullName>
            </value>
            <value>
                <fullName>Grand Boulevard (38)</fullName>
            </value>
            <value>
                <fullName>Greater Grand Crossing (69)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>