force-app/main/default/objects/Case_Record__c/fields/Community_Area_Website__c.field-meta.xml
<CustomField>
    <fullName>Community_Area_Website__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.com/maps/d/viewer?ie=UTF8&amp;oe=UTF8&amp;msa=0&amp;mid=1O-3Uot4mSetKW-M_govahruUjDc&amp;ll=41.835929258325436%2C-87.731988&amp;z=10&quot;, &quot;Click to Verify Community Area&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Area Website</label>
    <type>Text</type>
</CustomField>