force-app/main/default/objects/Case_Record__c/fields/Condition_One__c.field-meta.xml
<CustomField>
    <fullName>Condition_One__c</fullName>
    <description>Used by Case Record trigger rollup field for the Main Client: Contact.Number_of_Condition_One_Case_Records__c.</description>
    <formula>&quot;Yes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition_One</label>
    <type>Text</type>
</CustomField>