force-app/main/default/objects/Case_Record__c/fields/Conflict_Management_SOE_Date__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management_SOE_Date__c</fullName>
    <label>Conflict Management SOE Date</label>
    <type>Date</type>
</CustomField>