force-app/main/default/objects/Case_Record__c/fields/Conga_Sign_Documentation_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sign_Documentation_Exceptions__c</fullName>
    <description>Added Feb 2021 during Communications Coordination effort.</description>
    <inlineHelpText>Use this field to track if the participant is NOT required to submit the documentation through Conga Sign, either because they submitted it in another form or it does not apply to them.</inlineHelpText>
    <label>Conga Sign Documentation Exceptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Packet (WS D and CL D)</fullName>
            </value>
            <value>
                <fullName>Contracts Packet (WS D)</fullName>
            </value>
            <value>
                <fullName>Financial Packet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>