force-app/main/default/objects/Case_Record__c/fields/Connections_In_Cara__c.field-meta.xml
<CustomField>
    <fullName>Connections_In_Cara__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a close friend, significant other or family member currently enrolled at Cara</description>
    <inlineHelpText>Do you have a close friend, significant other or family member currently enrolled at Cara</inlineHelpText>
    <label>Personal Connections In Cara</label>
    <type>Checkbox</type>
</CustomField>