force-app/main/default/objects/Case_Record__c/fields/Connects_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Connects_Tracked__c</fullName>
    <inlineHelpText>Update field if participant expresses interest in temp work or expresses they are not interested in temp work.</inlineHelpText>
    <label>Connects Tracked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connects</fullName>
            </value>
            <value>
                <fullName>No Connects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>