force-app/main/default/objects/Case_Record__c/fields/Connects_Write_Ups__c.field-meta.xml
<CustomField>
    <fullName>Connects_Write_Ups__c</fullName>
    <label># Connects Write-Ups</label>
    <summaryFilterItems>
        <field>Incident__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Write-Up</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Incident__c.Issued_During__c</field>
        <operation>equals</operation>
        <value>Connects Assignment</value>
    </summaryFilterItems>
    <summaryForeignKey>Incident__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>