force-app/main/default/objects/Case_Record__c/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Link</label>
    <referenceTo>Contract_Link__c</referenceTo>
    <relationshipLabel>Case Records</relationshipLabel>
    <relationshipName>Case_Records</relationshipName>
    <type>Lookup</type>
</CustomField>