force-app/main/default/objects/Case_Record__c/fields/Contract_Link_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link_Name_Text__c</fullName>
    <label>Contract Link Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>