force-app/main/default/objects/Case_Record__c/fields/Contracts_Assigned_in_Allocations_Range__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Assigned_in_Allocations_Range__c</fullName>
    <formula>if (Current_Year_DHS_FSE_T_Allocations__c
|| Current_Year_DHS_TANF_Allocations__c 
|| Current_Year_CDBG_T_P_Allocations__c 
|| Current_Year_CSBG_TJ_Allocations__c 
|| Current_Year_CDBG_TRD_Allocations__c 
|| Current_Year_DHS_S2S_Allocations__c 
|| Contracts_None_Allocations__c, True, False)</formula>
    <inlineHelpText>Checked if student has an open assignment to an active grant/contract during the allocations timeframe. Chicago Foundation for Women (CFW) is excluded.</inlineHelpText>
    <label>Contracts: Assigned in Allocations Range</label>
    <type>Checkbox</type>
</CustomField>