force-app/main/default/objects/Case_Record__c/fields/Contracts_Birth_Date_Age_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Birth_Date_Age_Documentation__c</fullName>
    <label>Contracts Birth Date / Age Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birth Certificate/Hospital Record</fullName>
            </value>
            <value>
                <fullName>Federal, State, or Local Gov ID Card</fullName>
            </value>
            <value>
                <fullName>DD-214 w/ DOB</fullName>
            </value>
            <value>
                <fullName>Baptismal Certificate w/ DOB</fullName>
            </value>
            <value>
                <fullName>Social Security Adm NUM Printout</fullName>
            </value>
            <value>
                <fullName>Public Assistance/Medical Card</fullName>
            </value>
            <value>
                <fullName>Social Service Records</fullName>
            </value>
            <value>
                <fullName>School Records/ID Card</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>