force-app/main/default/objects/Case_Record__c/fields/Contracts_Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Internal_Note__c</fullName>
    <label>Contracts Internal Note</label>
    <type>TextArea</type>
</CustomField>