force-app/main/default/objects/Case_Record__c/fields/Contracts_None__c.field-meta.xml
<CustomField>
    <fullName>Contracts_None__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts None</label>
    <type>Checkbox</type>
</CustomField>