force-app/main/default/objects/Case_Record__c/fields/Contracts_None_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Contracts_None_Allocations__c</fullName>
    <formula>if (Current_Year_CDBG_T_P_Allocations__c 
|| Current_Year_CDBG_TRD_Allocations__c 
|| Current_Year_CSBG_TJ_Allocations__c
|| Current_Year_CSBG_CARES_Allocations__c 
|| Current_Year_DHS_FSE_T_Allocations__c
|| Current_Year_DHS_S2S_Allocations__c 
|| Current_Year_DHS_TANF_Allocations__c,


FALSE, 

if (Contracts_None__c

&amp;&amp; Contracts_None_Enrollment_Date__c &lt;= Program__r.Grant_Contract_Allocations_End_Date__c

&amp;&amp; (Contracts_None_Completion_Date__c &gt;= Program__r.Grant_Contract_Allocations_Start_Date__c || isblank (Contracts_None_Completion_Date__c))

, TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remains checked if None is the only active Grant/Contract to which the student is assigned as of the Allocations report date range.</inlineHelpText>
    <label>Contracts None Allocations</label>
    <type>Checkbox</type>
</CustomField>