force-app/main/default/objects/Case_Record__c/fields/Contracts_None_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracts_None_Enrollment_Date__c</fullName>
    <label>Contracts None Enrollment Date</label>
    <type>Date</type>
</CustomField>