force-app/main/default/objects/Case_Record__c/fields/Contracts_Photo_ID_on_File__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Photo_ID_on_File__c</fullName>
    <label>Contracts Photo ID on File</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State Identification Card</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>