force-app/main/default/objects/Case_Record__c/fields/Contracts_Residency_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Residency_Documentation__c</fullName>
    <label>Contracts Residency Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail-Other</fullName>
            </value>
            <value>
                <fullName>Letter from Shelter</fullName>
            </value>
            <value>
                <fullName>Medicaid/Medicare Card</fullName>
            </value>
            <value>
                <fullName>Current Voter Reg Card</fullName>
            </value>
            <value>
                <fullName>Letter for Social Service Agency</fullName>
            </value>
            <value>
                <fullName>Selective Service Registration Card</fullName>
            </value>
            <value>
                <fullName>Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Printout from other Gov Agency</fullName>
            </value>
            <value>
                <fullName>Current Utility Bill w/ Name &amp; Address</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>State ID</fullName>
            </value>
            <value>
                <fullName>Housing Authority Certification</fullName>
            </value>
            <value>
                <fullName>Public Assistance Record</fullName>
            </value>
            <value>
                <fullName>Food Stamp Award Letter</fullName>
            </value>
            <value>
                <fullName>Property Tax Records</fullName>
            </value>
            <value>
                <fullName>Landlord Statement/Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>