force-app/main/default/objects/Case_Record__c/fields/Contracts_Selective_Serv_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Selective_Serv_Documentation__c</fullName>
    <label>Contracts Selective Serv Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contacted Selective Service</fullName>
            </value>
            <value>
                <fullName>Stamped PO Receipt of Reg</fullName>
            </value>
            <value>
                <fullName>Selective Service Registration Card</fullName>
            </value>
            <value>
                <fullName>Failure to Reg Form</fullName>
            </value>
            <value>
                <fullName>Not Applicable-Female Student</fullName>
            </value>
            <value>
                <fullName>Not Applicable-Born before 1960</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>