force-app/main/default/objects/Case_Record__c/fields/Contracts_SSN_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Contracts_SSN_Documentation__c</fullName>
    <label>Contracts SSN Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Social Security Card/Printout Sheet</fullName>
            </value>
            <value>
                <fullName>Unemp. Compensation Info Sheet</fullName>
            </value>
            <value>
                <fullName>W-2 Form</fullName>
            </value>
            <value>
                <fullName>Pay Stub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>