force-app/main/default/objects/Case_Record__c/fields/Contracts_Work_Auth_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Work_Auth_Documentation__c</fullName>
    <label>Contracts Work Auth Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birth Certificate/Hospital Record</fullName>
            </value>
            <value>
                <fullName>Combo of State ID and Social Sec Card</fullName>
            </value>
            <value>
                <fullName>Combo of DL and Social Sec Card</fullName>
            </value>
            <value>
                <fullName>US Passport</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Naturalization Certification</fullName>
            </value>
            <value>
                <fullName>Alien Registration Card</fullName>
            </value>
            <value>
                <fullName>Foreign Passport w/ Eligibility Stamp</fullName>
            </value>
            <value>
                <fullName>Baptismal Certificate w/ DOB</fullName>
            </value>
            <value>
                <fullName>DD-214 w/ Place of Birth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>