force-app/main/default/objects/Case_Record__c/fields/Convicted_Charged_Violent_Crime__c.field-meta.xml
<CustomField>
    <fullName>Convicted_Charged_Violent_Crime__c</fullName>
    <label>Convicted/Charged of Violent Crime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>