force-app/main/default/objects/Case_Record__c/fields/Conviction_Category_for_Job_Matching__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Category_for_Job_Matching__c</fullName>
    <label>Conviction Category for Job Matching</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With convictions within past 7 yrs</fullName>
            </value>
            <value>
                <fullName>With convictions older than 7 yrs</fullName>
            </value>
            <value>
                <fullName>With no convictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>