force-app/main/default/objects/Case_Record__c/fields/Conviction_History_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Conviction_History_Narrative__c</fullName>
    <inlineHelpText>Background, as described by student during Admissions.</inlineHelpText>
    <label>Conviction History Narrative</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>