force-app/main/default/objects/Case_Record__c/fields/Conviction_Status__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Status__c</fullName>
    <formula>if (ispickval (Felony__c, &quot;Yes&quot;), &quot;Convicted of Felony(ies)&quot;, 
if (ispickval  (Misdemeanor__c, &quot;Yes&quot;), &quot;Convicted of Misdemeanor(s) Only&quot;, 
if (isblank (text(Felony__c)) &amp;&amp; isblank (text(Misdemeanor__c)), &quot;Background Not Available&quot;,
&quot;No Convictions&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conviction Status, All Time</label>
    <type>Text</type>
</CustomField>