force-app/main/default/objects/Case_Record__c/fields/COVID_Vaccination_Status__c.field-meta.xml
<CustomField>
    <fullName>COVID_Vaccination_Status__c</fullName>
    <label>COVID Vaccination Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Vaccinated</fullName>
            </value>
            <value>
                <fullName>Partially Vaccinated</fullName>
            </value>
            <value>
                <fullName>Not Vaccinated, Would Consider</fullName>
            </value>
            <value>
                <fullName>Not Vaccinated, Not Willing</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Say</fullName>
            </value>
            <value>
                <fullName>Not Vaccinated</fullName>
                <isActive>false</isActive>
                <label>Not Vaccinated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>