force-app/main/default/objects/Case_Record__c/fields/CRED_Salesforce_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CRED_Salesforce_Contact_ID__c</fullName>
    <description>Passed via flow to FormAssembly link to allow for Evaluations and Write-Ups to be simultaneously transferred to Cara and CRED Salesforce instances.</description>
    <label>CRED Salesforce Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>