force-app/main/default/objects/Case_Record__c/fields/Current_Year_CDBG_T_P_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CDBG_T_P_Completion_Date__c</fullName>
    <label>Current Year CDBG-T&amp;P Completion Date</label>
    <type>Date</type>
</CustomField>