force-app/main/default/objects/Case_Record__c/fields/Current_Year_CDBG_TRD__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CDBG_TRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year CDBG-EP&amp;P</label>
    <type>Checkbox</type>
</CustomField>